--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3100,7 +3100,7 @@ li {
 }
 
 .categories__menu--header {
-  background: var(--theme-color5);
+  /* background: var(--theme-color5); */
   height: 42px;
   padding: 0 14px;
   cursor: pointer;
