--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -7411,7 +7411,7 @@ textarea.form-control-lg {
 }
 
 .bg-danger {
-  background-color: #dc3545 !important;
+  background-color: #FF7800 !important;
 }
 
 .bg-light {
